Add name, description and URL to pom files